--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,8 @@
 			<li class='<%=@class_compra %>' ><a href="/compras"><%= t("app.menu.compra") %></a></li>
 			<li class='<%=@class_despesa %>' ><a href="/despesas"><%= t("app.menu.despesa") %></a></li>
 			<li class='<%=@class_fornecedor %>' ><a href="/fornecedores"><%= t("app.menu.fornecedor") %></a></li>
-			<li class="<%=@class_categoria %><%=@class_cor %><%=@class_marca %><%=@class_tamanho %><%=@class_tipo_despesa %>">
+			<li class='<%=@class_produto %>' ><a href="/produtos"><%= t("app.menu.produto") %></a></li>
+			<li class="<%=@class_categoria %><%=@class_cor %><%=@class_marca %><%=@class_tamanho %><%=@class_tipo_despesa %><%=@class_vendedor %>">
 		    	<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 			          <%= t("app.menu.administracao") %>
 			       <b class="caret"></b>
