Melhorias no cadastro de Produtos, Compras, Vendedores e Tamanhos

--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -385,3 +385,6 @@ button.btn::-moz-focus-inner,input[type=submit].btn::-moz-focus-inner{padding:0;
 .icon-search {
   background-position: -48px 0;
 }
+.icon-ok {
+  background-position: -288px 0;
+}
