--- a/app/views/produtos/edit.html.erb
+++ b/app/views/produtos/edit.html.erb
@@ -1,2 +1,6 @@
+<% if @produto.acao == Produto::COPY %>
+<h2><%= t("produto.acao.novo") %></h2>
+<% else %>
 <h2><%= t("produto.acao.editar") %></h2>
+<% end %>
 <%= render 'form' %>
