--- a/app/views/tamanhos/_form.html.erb
+++ b/app/views/tamanhos/_form.html.erb
@@ -21,6 +21,12 @@
 	     <%= f.text_field :descricao %>
 	    </div>
       </div>
+       <div class="clearfix">    
+   	     <%= f.label :default %>
+		<div class="input">
+		 <%= f.check_box :default %>
+	    </div>
+      </div>
           <div class="clearfix">    
    	     <%= f.label :observacao %>
 		<div class="input">
