--- a/app/views/vendedores/_form.html.erb
+++ b/app/views/vendedores/_form.html.erb
@@ -53,6 +53,12 @@
 	     <%= f.text_area :observacao, :rows => 10, :cols => 50 %>
 	    </div>
       </div>
+       <div class="clearfix">    
+   	     <%= f.label :default %>
+		<div class="input">
+		 <%= f.check_box :default %>
+	    </div>
+      </div>
     </td>
      <td width="40%"></td>
 </tr>
