--- a/app/views/compras/index.html.erb
+++ b/app/views/compras/index.html.erb
@@ -12,10 +12,11 @@
 <% if @compras.size > 0  %>
  <table class="zebra-striped">
   <tr>
-   	<th width="20%"><%= t('compra.descricao')%></th>
- 	<th width="20%"><%= t('compra.data')%></th>
-    <th width="20%"><%= t('compra.total_despesas')%></th>
-    <th width="20%"><%= t('compra.observacao')%></th>
+   	<th width="16%"><%= t('compra.descricao')%></th>
+ 	<th width="16%"><%= t('compra.data')%></th>
+    <th width="16%"><%= t('compra.total_despesas')%></th>
+	<th width="16%"><%= t('compra.default')%></th>
+    <th width="16%"><%= t('compra.observacao')%></th>
    	<th></th>
     <th></th>
     <th></th>
@@ -26,6 +27,7 @@
   	<td style="color:#666"><%= compra.descricao %></td>
 	<td style="color:#1E90FF"><%= I18n.l(compra.data) if compra.data %></td>
 	<td style="color:#006400"><%= number_to_currency(compra.total_despesas) if compra.total_despesas %></td>
+	<td style="color:#666"><% if (compra.default == 1) %><i class="icon-ok"></i><% end %></td>
 	<td title="<%= compra.observacao %>" style="color:#666"><%= show_obs(compra.observacao) %></td>
     <td style="color:#1E90FF"><%= link_to t('botao.detalhes'), compra %></td>
     <td style="color:#1E90FF"><%= link_to t('botao.editar'), edit_compra_path(compra)%></td>
