--- a/app/views/compras/show.html.erb
+++ b/app/views/compras/show.html.erb
@@ -12,6 +12,11 @@
 	  <b><%= t('compra.data')%>:</b>
 		<span style="color:#1E90FF"><%= I18n.l(@compra.data) if @compra.data %></span>  
 	</p>
+	
+	<p>
+	  <b><%= t('compra.default')%>:</b>
+		<%= show_check(@compra.default) if @compra %>
+	</p>
 
 	<p>
 	  <b><%= t('compra.total_despesas')%>:</b>
