--- a/app/views/despesas/_form.html.erb
+++ b/app/views/despesas/_form.html.erb
@@ -51,7 +51,7 @@
           <div class="clearfix">    
    	     <%= f.label :valor %>
 		<div class="input">
-	     <%= f.text_field :valor, :alt => 'decimal', :value => @despesa.valor %>
+	     <%= f.text_field :valor, :alt => 'decimal', :value => @despesa.valor, :onblur => 'calcula();' %>
 	    </div>
       </div>
     </td>
@@ -65,19 +65,13 @@
 	<div class="clearfix">    
    	     <%= f.label :parcela %>
 		<div class="input">
-			<%= f.select :parcela, options_for_select(['1','2','3','4','5','6'])  %>
+			<%= f.select :parcela, options_for_select(['1','2','3','4','5','6'], @despesa.parcela)  %>
 	    </div>
       </div>
 	<div class="clearfix">    
  	     <%= f.label :valor_pagamento %>
 		<div class="input">
-	     <%= f.text_field :valor_pagamento, :alt => 'decimal', :value => @despesa.valor_pagamento, :onblur => 'calcula();' %>
-	    </div>
-    </div>
-	<div class="clearfix">    
- 	     <%= f.label :valor_total %>
-		<div class="input">
-	    	<input type="text" id="valor_total" name="valor_total" alt="decimal" readonly sytle="text-align:right;" /> 
+	     <%= f.text_field :valor_pagamento, :alt => 'decimal', :value => @despesa.valor_pagamento, :onblur => 'calcula();', :readonly => true %>
 	    </div>
     </div>
 	   <div class="clearfix">    
@@ -101,29 +95,32 @@
 
  function calcula() {
 	
-	vp = $('#despesa_valor_pagamento').val();
+	vp = $('#despesa_valor').val();
 	pa = $('#despesa_parcela').val();
-	vp = vp.replace('.','');	
-    vp = vp.replace(',','.');	
+	//vp = vp.replace('.','');	
+    //vp = vp.replace(',','.');	
 	result = 0;
 
 	if (vp != null && pa != "") {
-		result = parseFloat(vp) * parseInt(pa);
+		result = parseFloat(vp) / parseInt(pa);
 		result = result.toFixed(2);
-		result = result.replace('.','');
-		$('#valor_total').val(result);
-		$('#valor_total').setMask();
+		//result = result.replace('.','');
+		$('#despesa_valor_pagamento').val(result);
+		//$('#valor_total').setMask();
 	} else {
-		$('#valor_total').val('0,00');
+		$('#despesa_valor_pagamento').val('0,00');
 	}
+	
+
  }
 
 $('#despesa_parcela').change(function() {calcula();});
 
 $('#despesa_data').datepicker({dateFormat : 'dd/mm/yy'});
 $('#despesa_data_pagamento').datepicker({dateFormat : 'dd/mm/yy'});
-$('#despesa_valor').setMask();
+calcula();
+//$('#despesa_valor').setMask();
 
-$('#despesa_valor_pagamento').setMask();
+//$('#despesa_valor_pagamento').setMask();
 
 </script>
