--- a/app/views/compras/show.html.erb
+++ b/app/views/compras/show.html.erb
@@ -27,8 +27,35 @@
 	  <b><%= t('compra.observacao')%>:</b>
 	  <%= @compra.observacao if @compra  %>
 	</p>
-		
-</td></tr></table>
+  </td>
+  <td>
+ 	<table class="zebra-striped">
+       <tr>
+        <th width="20%"><%= t('despesa.tipo_despesa')%></th>
+		<th width="20%"><%= t('despesa.fornecedor')%></th>
+		<th width="20%"><%= t('despesa.descricao')%></th>
+        <th width="20%"><%= t('despesa.data')%></th>
+        <th width="20%"><%= t('despesa.valor')%></th>
+	</tr>
+	 <% @compra.despesas.each do |despesa| %>
+		<tr>
+	        <td style="color:#666"><%= despesa.tipo_despesa.descricao if despesa.tipo_despesa %></td>
+	        <td style="color:#666"><%= despesa.fornecedor.nome if despesa.fornecedor %></td>
+			<td style="color:#666"><%= despesa.descricao %></td>
+	        <td style="color:#1E90FF"><%= I18n.l(despesa.data) if despesa.data %></td>
+	        <td style="color:#006400"><%= number_to_currency(despesa.valor) if despesa.valor %></td>
+		</tr>
+	 <% end %>	
+	    <tr>
+	    	<td colspan="3">&nbsp;</td>
+	        <td>TOTAL</td>
+	        <td style="color:#006400"><b><%= number_to_currency(@compra.total_despesas) if @compra.total_despesas %></b></td>  
+	    </tr>	
+    </table>
+
+   </td>
+  <td width="30%"></td>
+</tr></table>
 <div class="actionsShow">
 	<a href="<%= edit_compra_path %>">
 		<button class="btn primary" name="btnback"><%= t('botao.editar')%></button></a>&nbsp; 
