--- a/app/views/despesas/show.html.erb
+++ b/app/views/despesas/show.html.erb
@@ -45,8 +45,8 @@
 				<tr>
 					<td><%= pagamento.despesa.lista_formas.key(pagamento.forma_pagamento) %></td>
 					<td><%= pagamento.parcela %></td>
-					<td><%= number_to_currency(pagamento.valor) %></td>
-					<td><%= pagamento.data %></td>
+					<td style="color:#006400"><%= number_to_currency(pagamento.valor) %></td>
+					<td style="color:#1E90FF"><%= I18n.l(pagamento.data) if pagamento.data %></td>
 				</tr>	
 			 <% end %>		
         </table>
