--- a/app/views/produtos/_form.html.erb
+++ b/app/views/produtos/_form.html.erb
@@ -79,13 +79,13 @@
           <div class="clearfix">    
    	     <%= f.label :valor_compra %>
 		<div class="input">
-	     <%= f.text_field :valor_compra, :alt => 'decimal', :value => @produto.valor_compra %>
+	     <%= f.text_field :valor_compra, :alt => 'decimal', :value => @produto.valor_compra, :onblur => 'calcula();' %>
 	    </div>
       </div>
           <div class="clearfix">    
    	     <%= f.label :valor_venda %>
 		<div class="input">
-	     <%= f.text_field :valor_venda, :alt => 'decimal', :value => @produto.valor_venda %>
+	     <%= f.text_field :valor_venda, :alt => 'decimal', :value => @produto.valor_venda, :onblur => 'calcula();' %>
 	    </div>
       </div>
           <div class="clearfix">    
@@ -98,7 +98,7 @@
           <div class="clearfix">    
    	     <%= f.label :margem_lucro %>
 		<div class="input">
-	     <%= f.text_field :margem_lucro %>
+	     <%= f.text_field :margem_lucro, :readonly => true %>
 	    </div>
       </div>
           <div class="clearfix">    
@@ -135,16 +135,20 @@
 <script>
 
   function calcula() {
-     
+	$('#produto_margem_lucro').val("")
 	vc = $('#produto_valor_compra').val();
 	vv = $('#produto_valor_venda').val();
-	result = ((vv - vc) / vc) * 100; 
-	$('#produto_margem_lucro').val(result);
+
+    if (vc != "" && vv != "") { 
+		result = ((vv - vc) / vc) * 100; 
+		result = result.toFixed(2);
+		$('#produto_margem_lucro').val(result + "%");
+    }
   }
 
  $('#produto_descricao').focus();
- $('#produto_valor_compra').setMask();
- $('#produto_valor_venda').setMask();
- $('#produto_valor_minimo').setMask();
+ //$('#produto_valor_compra').setMask();
+ //$('#produto_valor_venda').setMask();
+ //$('#produto_valor_minimo').setMask();
 
 </script>
