--- a/app/views/tipo_despesas/_form.html.erb
+++ b/app/views/tipo_despesas/_form.html.erb
@@ -15,13 +15,19 @@
 <br>
 <table>
 	<tr><td>
-          <div class="clearfix">    
+        <div class="clearfix">    
    	     <%= f.label :descricao %>
 		<div class="input">
 	     <%= f.text_field :descricao %>
 	    </div>
       </div>
-          <div class="clearfix">    
+	   <div class="clearfix">    
+   	     <%= f.label :retorno %>
+		<div class="input">
+	     <%= f.check_box :retorno %>
+	    </div>
+      </div>
+        <div class="clearfix">    
    	     <%= f.label :observacao %>
 		<div class="input">
 	     <%= f.text_area :observacao, :rows => 10, :cols => 50 %>
