--- a/app/views/despesas/show.html.erb
+++ b/app/views/despesas/show.html.erb
@@ -36,10 +36,10 @@
    <td>
    		<table class="zebra-striped">
 	        <tr>
-		        <th>Forma Pagamento</th>
-				<th>Parcela</th>
-				<th>Valor</th>
-				<th>Data</th>
+		        <th width="25%">Forma Pagamento</th>
+				<th width="25%">Parcela</th>
+				<th width="25%">Valor</th>
+				<th width="25%">Data</th>
 			</tr>
 			<% @despesa.pagamento_despesas.each do |pagamento| %>
 				<tr>
