--- a/app/views/compras/index.html.erb
+++ b/app/views/compras/index.html.erb
@@ -12,11 +12,13 @@
 <% if @compras.size > 0  %>
  <table class="zebra-striped">
   <tr>
-	<th width="7%"><%= t('compra.default')%></th>
-   	<th width="18%"><%= t('compra.descricao')%></th>
- 	<th width="15%"><%= t('compra.data')%></th>
-    <th width="15%"><%= t('compra.total_despesas')%></th>
-    <th width="20%"><%= t('compra.observacao')%></th>
+	<th width="5%" style="text-align:center;"><%= t('compra.default')%></th>
+   	<th width="15%"><%= t('compra.descricao')%></th>
+ 	<th width="10%"><%= t('compra.data')%></th>
+    <th width="12%"><%= t('compra.total_despesas')%></th>
+	<th width="12%"><%= t('compra.com_retorno')%></th>
+	<th width="11%"><%= t('compra.sem_retorno')%></th>
+    <th width="15%"><%= t('compra.observacao')%></th>
    	<th></th>
     <th></th>
     <th></th>
@@ -24,10 +26,12 @@
 
  <% @compras.each do |compra| %>
   <tr>
-	<td style="color:#666"><% if (compra.default == 1) %><i class="icon-ok"></i><% end %></td>
+	<td style="color:#666;text-align:center;"><% if (compra.default == 1) %><i class="icon-ok"></i><% end %></td>
   	<td style="color:#666"><%= compra.descricao %></td>
 	<td style="color:#1E90FF"><%= I18n.l(compra.data) if compra.data %></td>
 	<td style="color:#006400"><%= number_to_currency(compra.total_despesas) if compra.total_despesas %></td>
+	<td style="color:#006400"><%= number_to_currency(compra.total_com_retorno) if compra.total_com_retorno %></td>
+	<td style="color:#006400"><%= number_to_currency(compra.total_sem_retorno) if compra.total_sem_retorno %></td>
 	<td title="<%= compra.observacao %>" style="color:#666"><%= show_obs(compra.observacao) %></td>
     <td style="color:#1E90FF"><%= link_to t('botao.detalhes'), compra %></td>
     <td style="color:#1E90FF"><%= link_to t('botao.editar'), edit_compra_path(compra)%></td>
