--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,8 @@
             <li class='<%=@class_cliente %>' ><a href="/clientes"><%= t("app.menu.cliente") %></a></li>
 			<li class='<%=@class_compra %>' ><a href="/compras"><%= t("app.menu.compra") %></a></li>
 			<li class='<%=@class_despesa %>' ><a href="/despesas"><%= t("app.menu.despesa") %></a></li>
-			<li class='<%=@class_fornecedor %>' ><a href="/fornecedores"><%= t("app.menu.fornecedor") %></a></li>
 			<li class='<%=@class_produto %>' ><a href="/produtos"><%= t("app.menu.produto") %></a></li>
-			<li class="<%=@class_categoria %><%=@class_cor %><%=@class_marca %><%=@class_tamanho %><%=@class_tipo_despesa %><%=@class_vendedor %>">
+			<li class="<%=@class_categoria %><%=@class_cor %><%=@class_marca %><%=@class_tamanho %><%=@class_tipo_despesa %><%=@class_vendedor %><%=@class_fornecedor %>">
 		    	<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 			          <%= t("app.menu.administracao") %>
 			       <b class="caret"></b>
@@ -28,6 +27,7 @@
 		            <li class='<%=@class_categoria %>' ><a href="/categorias"><%= t("app.menu.categoria") %></a></li>
 					<li class='<%=@class_cidade %>' ><a href="/cidades"><%= t("app.menu.cidade") %></a></li>
 					<li class='<%=@class_cor %>' ><a href="/cores"><%= t("app.menu.cor") %></a></li>
+					<li class='<%=@class_fornecedor %>' ><a href="/fornecedores"><%= t("app.menu.fornecedor") %></a></li>
 					<li class='<%=@class_marca %>' ><a href="/marcas"><%= t("app.menu.marca") %></a></li>
 					<li class='<%=@class_tamanho %>' ><a href="/tamanhos"><%= t("app.menu.tamanho") %></a></li>
 					<li class='<%=@class_tipo_despesa %>' ><a href="/tipo_despesas"><%= t("app.menu.tipo_despesa") %></a></li>
