--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
             <li class='<%=@class_home %>' ><a href="/home"><%= t("app.menu.home") %></a></li>
             <li class='<%=@class_cliente %>' ><a href="/clientes"><%= t("app.menu.cliente") %></a></li>
 			<li class='<%=@class_compra %>' ><a href="/compras"><%= t("app.menu.compra") %></a></li>
+			<li class='<%=@class_venda %>' ><a href="/vendas"><%= t("app.menu.venda") %></a></li>
 			<li class='<%=@class_despesa %>' ><a href="/despesas"><%= t("app.menu.despesa") %></a></li>
 			<li class='<%=@class_produto %>' ><a href="/produtos"><%= t("app.menu.produto") %></a></li>
 			<li class="<%=@class_categoria %><%=@class_cor %><%=@class_marca %><%=@class_tamanho %><%=@class_tipo_despesa %><%=@class_vendedor %><%=@class_fornecedor %>">
