--- a/app/views/vendas/_form.html.erb
+++ b/app/views/vendas/_form.html.erb
@@ -46,20 +46,32 @@
 	<div class="clearfix">    
 	  <%= f.label :consulta_produto %>
 	<div class="input">
-      <input type="text" name="codigo_produto" id="codigo_produto" value="" />
+      <input type="text" name="codigo_produto" id="codigo_produto" value="" style="width:400px" />
     </div>
     </div>
 	
   	<table class="zebra-striped" id="tableprod">
 	  <thead>
 		<tr>
-			<th width="30%">Name</th>
-			<th width="30%">Col 3</th>
-			<th width="30%">Col 4</th>
+			<th width="20%">Código</th>
+			<th width="40%">Descrição</th>
+			<th width="30%">Valor</th>
 			<th width="10%">&nbsp;</th>
 		</tr>
 		</thead>
 		<tbody>
+			<% if @venda.produtos.size > 0 %>
+				<% @venda.produtos.each_with_index do |produto,i| %>
+				  <tr id="linha<%= i %>">
+					    <input type="hidden" name="venda[produtos_attributes][<%= i %>][id]" value="<%= produto.id %>"/>
+				        <td style="padding:5px;color:#1E90FF;padding-left:20px;"><%= produto.codigo_interno %></td>
+					    <td style="padding:5px;color:#666"><%= produto.descricao %></td>
+				        <td style="padding:5px;color:#006400"><%= number_to_currency(produto.valor_venda) %></td>
+				        <td style="padding:5px;color:#666"><%= image_tag("remove.jpg", :id => "removeprod#{i}", :size => "20x20", :style => "cursor:pointer", :title => "Remover" , :onclick => "removeProduto(this, #{i})") %></td>
+				  </tr>
+				 <% end %>
+				<input type="hidden" id="contador" name="contador" value="<%= @venda.produtos.size %>"/>
+			<% end %>	
 		</tbody>	
     </table>
   </td>
@@ -78,24 +90,32 @@
 
  $(function() {
 	var id = 0;
+	
+	cont = $("#contador").val();
+	
+	if (cont != undefined) {
+		id = cont - 1;
+	}
 
 	$("#codigo_produto").autocomplete({
 		source: "/produtos/auto",
 		minLength: 1,
 		select: function( event, ui ) {
-			//$("codigo_produto").val(ui.item.label);
 			id++;
 			
-			var prot = '<tr id="linha'+id+'">' + 
-			'<td>'+ ui.item.id + '</td>' +
-			'<td>'+ ui.item.label + '</td>' +
-			'<td>&nbsp;</td>'+
-			'<td><%= image_tag("remove.jpg", :id => "removeprod'+id+'", :size => "26x26", :style => "cursor:pointer", :title => "Remover" , :onclick => "removeProduto(this, '+id+')") %></td></tr>';
+			var prot = '<tr id="linha'+id+'" >' + 
+			'<input type="hidden" name="venda[produtos_attributes]['+id+'][id]" value="'+ui.item.id+'"/>' +
+			'<td style="padding:5px;padding-left:20px;color:#1E90FF;">'+ ui.item.codigo + '</td>' +
+			'<td style="padding:5px;color:#666;">'+ ui.item.descricao + '</td>' +
+			'<td style="padding:5px;color:#006400;">'+ ui.item.valor + '</td>'+
+			'<td style="padding:5px;"><%= image_tag("remove.jpg", :id => "removeprod'+id+'", :size => "20x20", :style => "cursor:pointer", :title => "Remover" , :onclick => "removeProduto(this, '+id+')") %></td></tr>';
 
 			$("#tableprod").find("tbody").append(prot);
-			$("#venda_observacao").val("asd");
 		}
 	});
+	
+	$('#codigo_produto').blur(function() { $(this).val(''); });
+	$('#codigo_produto').click(function() { $(this).val(''); });
 	
   });
 
