Ajustes no módulo de Vendas

--- a/app/views/produtos/show.html.erb
+++ b/app/views/produtos/show.html.erb
@@ -10,7 +10,7 @@
  
 		<p>
 		  <b><%= t('produto.codigo_interno')%>:</b>
-		  <%= @produto.codigo_interno if @produto  %>
+		  <span style="color:#1E90FF"><%= @produto.codigo_interno if @produto  %></span>
 		</p>
  
 		<p>
