--- a/app/views/compras/show.html.erb
+++ b/app/views/compras/show.html.erb
@@ -32,7 +32,32 @@
 	  <b><%= t('compra.sem_retorno')%>:</b>
 	  <span style="color:#006400"><%= number_to_currency(@compra.total_sem_retorno) if @compra.total_sem_retorno %></span>
 	</p>
+	
+	<p>
+	  <b><%= t('compra.previsao_vendas')%>:</b>
+	  <span style="color:#006400"><%= number_to_currency(@compra.total_retorno_produtos) if @compra.total_retorno_produtos %></span>
+	</p>
+	
+	<p>
+	  <b><%= t('compra.total_lucro')%>:</b>
+	  <span style="color:#006400"><%= number_to_currency(@compra.total_lucro) if @compra.total_lucro %></span>
+	</p>
+	
+	<p>
+	  <b><%= t('compra.lucratividade')%>:</b>
+	  <span style="color:#006400"><%= number_to_percentage(@compra.lucratividade) if @compra.lucratividade %></span>
+	</p>
+	
+	<p>
+	  <b><%= t('compra.rentabilidade')%>:</b>
+	  <span style="color:#006400"><%= number_to_percentage(@compra.rentabilidade) if @compra.rentabilidade %></span>
+	</p>
 
+	<p>
+	  <b><%= t('compra.prazo_retorno')%>:</b>
+	  <span style="color:#006400"><%= @compra.prazo_retorno if @compra.prazo_retorno %></span>
+	</p>
+	
 	<p>
 	  <b><%= t('compra.observacao')%>:</b>
 	  <%= @compra.observacao if @compra  %>
@@ -41,12 +66,15 @@
   <td>
  	<table class="zebra-striped">
        <tr>
-		<th width="10%"><%= t('despesa.retorno')%></th>
-        <th width="20%"><%= t('despesa.tipo_despesa')%></th>
-		<th width="20%"><%= t('despesa.fornecedor')%></th>
-		<th width="20%"><%= t('despesa.descricao')%></th>
-        <th width="15%"><%= t('despesa.data')%></th>
-        <th width="15%"><%= t('despesa.valor')%></th>
+		<th width="5%"><%= t('despesa.retorno')%></th>
+        <th width="10%"><%= t('despesa.despesa')%></th>
+		<th width="16%"><%= t('despesa.fornecedor')%></th>
+		<th width="16%"><%= t('despesa.descricao')%></th>
+        <th width="10%"><%= t('despesa.data')%></th>
+        <th width="13%"><%= t('despesa.total')%></th>
+		<th width="10%"><%= t('despesa.forma')%></th>
+		<th width="10%"><%= t('despesa.parcelas')%></th>
+		<th width="10%"><%= t('despesa.valor')%></th>
 	</tr>
 	 <% @compra.despesas.each do |despesa| %>
 		<tr>
@@ -56,17 +84,21 @@
 			<td style="color:#666"><%= despesa.descricao %></td>
 	        <td style="color:#1E90FF"><%= I18n.l(despesa.data) if despesa.data %></td>
 	        <td style="color:#006400"><%= number_to_currency(despesa.valor) if despesa.valor %></td>
+			<td style="color:#666"><%= despesa.lista_formas.key(despesa.forma_pagamento) %></td>
+			<td style="color:#666"><%= despesa.parcela %></td>
+			<td style="color:#006400"><%= number_to_currency(despesa.valor_pagamento) if despesa.valor_pagamento %></td>
 		</tr>
 	 <% end %>	
 	    <tr>
 	    	<td colspan="4">&nbsp;</td>
 	        <td>TOTAL</td>
 	        <td style="color:#006400"><b><%= number_to_currency(@compra.total_despesas) if @compra.total_despesas %></b></td>  
+			<td colspan="3">&nbsp;</td>
 	    </tr>	
     </table>
 
    </td>
-  <td width="20%"></td>
+  <td width="10%"></td>
 </tr></table>
 <div class="actionsShow">
 	<a href="<%= edit_compra_path %>">
